--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ html {
   from {}
 
   to {
-    text-shadow: 2px 2px 1.1em #1e96fc;
+    text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
   }
 }
 
@@ -187,14 +187,17 @@ html {
 }
 
 .project-list img {
+  filter: grayscale(100%);
   width: 22%;
   margin: 0 0.5%;
-  opacity: 0.8;
+  opacity: 0.7;
   transition: 0.6s;
 }
 
 .project-list img:hover {
   opacity: 1;
+  transform: scale(1.01);
+  filter: grayscale(0);
 }
 
 .action {
@@ -215,7 +218,7 @@ html {
 footer {
   width: 100%;
   background-color: var(--primary-color);
-  padding: 15px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -228,6 +231,7 @@ footer a {
 }
 
 footer p {
+  font-size: 1.2em;
   margin-left: 12px;
 }
 
