--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ html {
 }
 
 .nav p {
+  user-select: none;
   width: 100%;
   height: 100%;
   color: #bfbfbf;
@@ -51,6 +52,7 @@ html {
 }
 
 .nav-list a {
+  user-select: none;
   text-decoration: none;
   color: #bfbfbf;
   padding: 20px;
